# rockstar

./: CMakeLists.txt  LICENSE  README.md  branching.md  context.md  install.sh
src/: main.cpp
src/dsp/: cabsim.cpp  cabsim.h  dsp_engine.cpp  dsp_engine.h  eq.h
src/host/: jack_host.cpp  jack_host.h
tests/: CMakeLists.txt  test_eq.cpp
